<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item android:title="@string/drawer_item_main">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/startFragment"
                    android:icon="@drawable/ic_home_24"
                    android:orderInCategory="1"
                    android:title="@string/start_fragment_label"/>
                <item
                    android:id="@+id/searchFragment"
                    android:icon="@drawable/ic_search_24"
                    android:orderInCategory="2"
                    android:title="@string/search_fragment_label"/>
                <!--
                <item
                    android:id="@+id/loginFragment"
                    android:icon="@drawable/ic_login_24"
                    android:orderInCategory="3"
                    android:title="@string/login_fragment_label"/>
                <item
                    android:id="@+id/aboutFragment"
                    android:icon="@drawable/ic_info_24"
                    android:orderInCategory="4"
                    android:title="@string/about_fragment_label"/>
                <item
                    android:id="@+id/settingsFragment"
                    android:icon="@drawable/ic_settings_24"
                    android:orderInCategory="5"
                    android:title="@string/settings_fragment_label"/>
                -->
            </group>
        </menu>
    </item>

    <!--
    <item android:title="@string/drawer_item_actions">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/scanBarcodeAction"
                    android:icon="@drawable/ic_barcode_scan_24"
                    android:title="@string/scan_barcode_action_label"/>
                <item
                    android:id="@+id/feedbackAction"
                    android:icon="@drawable/ic_email_24"
                    android:title="@string/feedback_action_label"/>
                <item
                    android:id="@+id/logoutAction"
                    android:icon="@drawable/ic_logout_24"
                    android:title="@string/logout_action_label"/>
            </group>
        </menu>
    </item>
    -->

</menu>
