<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/startFragment"
        android:name="app.mediabrainz.ui.fragment.StartFragment"
        android:label="@string/start_fragment_label"
        tools:layout="@layout/start_fragment"/>

    <fragment
            android:id="@+id/searchFragment"
            android:name="app.mediabrainz.ui.fragment.SearchFragment"
            android:label="@string/search_fragment_label"
            tools:layout="@layout/search_fragment">
        <action
                android:id="@+id/action_searchFragment_to_resultSearchFragment"
                app:destination="@id/resultSearchFragment"/>
    </fragment>

    <fragment
            android:id="@+id/resultSearchFragment"
            android:name="app.mediabrainz.ui.fragment.ResultSearchFragment"
            android:label="@string/result_search_fragment_label"
            tools:layout="@layout/paged_recycler_fragment">
        <argument
                android:name="artistQuery"
                app:argType="string"/>
        <argument
                android:name="albumQuery"
                app:argType="string"/>
        <argument
                android:name="trackQuery"
                app:argType="string"/>
        <argument
                android:name="searchQuery"
                app:argType="string"/>
        <argument
                android:name="searchType"
                app:argType="integer"/>
    </fragment>

    <!--
    <fragment
        android:id="@+id/aboutFragment"
        android:name="app.mediabrainz.fragment.AboutFragment"
        android:label="@string/about_fragment_label"
        tools:layout="@layout/about_fragment"/>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="app.mediabrainz.fragment.SettingsFragment"
        android:label="@string/settings_fragment_label"/>

    <fragment
        android:id="@+id/loginFragment"
        android:name="app.mediabrainz.fragment.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/login_fragment">
        <action
            android:id="@+id/action_loginFragment_to_startFragment"
            app:destination="@id/startFragment"/>
    </fragment>

    <fragment
        android:id="@+id/releasesFragment"
        android:name="app.mediabrainz.fragment.ReleasesFragment"
        android:label="@string/releases_fragment_label"
        tools:layout="@layout/fragment_paged_recycler">
        <argument
            android:name="type"
            app:argType="integer"
            app:nullable="false"/>
        <argument
            android:name="mbid"
            app:argType="string"
            app:nullable="false"/>
        <argument
            android:name="releaseMbid"
            app:argType="string"
            app:nullable="true"/>
        <action
            android:id="@+id/action_releasesFragmentt_to_releaseGroupFragment"
            app:destination="@id/releaseGroupFragment">
            <argument
                android:name="mbid"
                app:argType="string"
                app:nullable="false"/>
        </action>
    </fragment>

    <action
        android:id="@+id/action_global_releasesFragment"
        app:destination="@id/releasesFragment">
        <argument
            android:name="type"
            app:argType="integer"
            app:nullable="false"/>
        <argument
            android:name="mbid"
            app:argType="string"
            app:nullable="false"/>
    </action>

    <action
        android:id="@+id/action_global_loginFragment"
        app:destination="@id/loginFragment"/>

    <fragment
        android:id="@+id/linksFragment"
        android:name="app.mediabrainz.fragment.LinksFragment"
        android:label="@string/links_fragment_label">
        <argument
            android:name="subTitle"
            app:argType="string"
            app:nullable="true"/>
    </fragment>

    <action
        android:id="@+id/action_global_linksFragment"
        app:destination="@id/linksFragment"/>

    <fragment
        android:id="@+id/wikiFragment"
        android:name="app.mediabrainz.fragment.WikiFragment"
        android:label="@string/wiki_fragment_label">
        <argument
            android:name="subTitle"
            app:argType="string"
            app:nullable="true"/>
    </fragment>

    <action
        android:id="@+id/action_global_wikiFragment"
        app:destination="@id/wikiFragment"/>

    <action
        android:id="@+id/action_global_artistFragment"
        app:destination="@id/artistFragment">
        <argument
            android:name="mbid"
            app:argType="string"
            app:nullable="false"/>
    </action>

    <fragment
        android:id="@+id/artistFragment"
        android:name="app.mediabrainz.fragment.ArtistFragment"
        android:label="@string/artist_fragment_label"
        tools:layout="@layout/artist_fragment">
        <action
            android:id="@+id/action_artistFragment_to_artistReleasesFragment"
            app:destination="@id/artistReleasesFragment">
            <argument
                android:name="artistMbid"
                app:argType="string"
                app:nullable="false"/>
            <argument
                android:name="artistName"
                app:argType="string"
                app:nullable="false"/>
        </action>
        <action
            android:id="@+id/action_artistFragment_to_artistRelationsFragment"
            app:destination="@id/artistRelationsFragment"/>
        <action
            android:id="@+id/action_artistFragment_to_artistTagsPagerFragment"
            app:destination="@id/artistTagsPagerFragment"/>
        <argument
            android:name="mbid"
            app:argType="string"
            app:nullable="false"/>
    </fragment>

    <fragment
        android:id="@+id/artistReleasesFragment"
        android:name="app.mediabrainz.fragment.ArtistReleasesFragment"
        android:label="@string/artist_releases_fragment_label"
        tools:layout="@layout/fragment_pager_without_icons">
        <argument
            android:name="artistMbid"
            app:argType="string"
            app:nullable="false"/>
        <argument
            android:name="artistName"
            app:argType="string"
            app:nullable="false"/>
    </fragment>

    <fragment
        android:id="@+id/artistRelationsFragment"
        android:name="app.mediabrainz.fragment.ArtistRelationsFragment"
        android:label="@string/artist_relations_fragment_label"
        tools:layout="@layout/artist_relations_fragment">
        <action
            android:id="@+id/action_artistRelationsFragment_to_artistFragment"
            app:destination="@id/artistFragment"/>
        <argument
            android:name="subTitle"
            app:argType="string"
            app:nullable="true"/>
    </fragment>

    <fragment
        android:id="@+id/artistTagsPagerFragment"
        android:name="app.mediabrainz.fragment.ArtistTagsPagerFragment"
        android:label="@string/artist_tags_pager_fragment_label"
        tools:layout="@layout/edit_tags_pager_fragment"/>

    <fragment
        android:id="@+id/releaseGroupFragment"
        android:name="app.mediabrainz.fragment.ReleaseGroupFragment"
        android:label="@string/release_group_fragment_label"
        tools:layout="@layout/release_group_fragment">
        <argument
            android:name="mbid"
            app:argType="string"
            app:nullable="false"/>
    </fragment>

    -->

</navigation>